--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-RNG4KAQI\\SQLEXPRESS01;Database=ProjektGrupowy;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAPTOP-RNG4KAQI\\SQLEXPRESS01;Database=ProjektGrupowy;Trusted_Connection=True;TrustServerCertificate=True",
+    "DefaultConnection1": "Data Source=DESKTOP-8EP9S8L;Initial Catalog=EVENTY;Integrated Security=True;Trust Server Certificate=True"
+
   },
   "Logging": {
     "LogLevel": {
