--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -10,6 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Test\**" />
+    <Content Remove="Views\Test\**" />
+    <EmbeddedResource Remove="Views\Test\**" />
+    <None Remove="Views\Test\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="ProjectSERVICES\QrService.cs" />
   </ItemGroup>
 
@@ -30,10 +37,6 @@
     <PackageReference Include="Stripe.net" Version="48.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.4" />
     <PackageReference Include="Twilio" Version="7.10.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Test\" />
   </ItemGroup>
 
 </Project>
