feat: improve png and logic in services

--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -17,7 +17,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\resources\logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="ProjectSERVICES\QrService.cs" />
+    <None Include="wwwroot\resources\LOGO.png" />
   </ItemGroup>
 
   <ItemGroup>
